Bug 65589 - Zotero extension does not install in 4.1
Summary: Zotero extension does not install in 4.1
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta2
Hardware: Other Linux (All)
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:4.1.0 target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-09 21:54 UTC by Hermann K
Modified: 2013-07-10 17:36 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hermann K 2013-06-09 21:54:55 UTC
When adding the Zotero extension to Libreoffice 4.1 Beta 2, the installation fails. Extension manager throws the following message up:

(com.sun.star.uno.DeploymentException) { { { Message = "unoidl::FileFormatException for <file:///home/user/.config/libreofficedev/4/user/uno_packages/cache/uno_packages/luqpcf70.tmp_/Zotero_OpenOffice_Integration.oxt/types.rdb>: legacy format: cannot open UCR key: 9", Context = (com.sun.star.uno.XInterface) @7fd7ccb26328 (ImplementationName = "com.sun.star.comp.cppuhelper.bootstrap.TypeManager") } } }

Since Zotero has developed into one of the standard bibliographical application in academia, this should perhaps be addressed.

Mendeley, the other widely used non-MS bibliography- and reference messenger appears to install, but does not work in 4.1 Beta 2
Comment 1 Martin Srebotnjak 2013-06-20 10:43:56 UTC
I can confirm, on OSX. Same goes for RC1.
Comment 2 ribotb 2013-06-28 09:34:03 UTC
Hi,

I confirm for LO4.1.0.1 under Windows 7.

Bernard
Comment 3 Julien Nabet 2013-07-02 21:54:54 UTC
Where did you get Zotero extension? I only found this url http://www.zotero.org/support/word_processor_plugin_installation#libreoffice_openofficeorg_neooffice and read LO 3.5.6
Comment 4 Simon Kornblith 2013-07-09 14:00:05 UTC
3.5.6 is the version of our LibreOffice extension, not the version of LibreOffice required.

Just installing the oxt should be sufficient to reproduce this, which you can do from https://github.com/zotero/zotero-libreoffice-integration/raw/master/install/Zotero_OpenOffice_Integration.oxt

I assume this is related to the new types.rdb format, since that's the code that's throwing this error. I can't find any documentation on this, so it's unclear to me whether our extension throws this error because the old types.rdb format is no longer supported and we will have to build/distribute a separate extension for LibreOffice 4.1, or because there's a bug in the code that handles the legacy types.rdb format.
Comment 5 Stephan Bergmann 2013-07-09 14:59:16 UTC
Looks like that Zotero_OpenOffice_Integration.oxt contains a types.rdb containing just some junk which the old code silently ignored.  Printing it with regview gives just

> /
>  / build
>    / urd
>      / org
>        / zotero
>          / integration
>            / ooo
>              / *urd
>              / ZoteroOpenOfficeIntegration.urd
Comment 6 Simon Kornblith 2013-07-09 17:04:25 UTC
Thanks for looking into this. I'll remove the types.rdb file from the extension.
Comment 7 Commit Notification 2013-07-09 17:56:22 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6228a80271462a26d409224e84d0e0a3b005c1d6&h=libreoffice-4-1

fdo#65589: Treat legacy types.rdb w/o /UCR key as empty


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-07-09 17:56:39 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=87bad231d6f81c611ba145aea483a568623ca42e

fdo#65589: Treat legacy types.rdb w/o /UCR key as empty



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Stephan Bergmann 2013-07-10 06:42:55 UTC
requested backport of fix to libreoffice-4-1-0 as <https://gerrit.libreoffice.org/#/c/4789/>
Comment 10 Commit Notification 2013-07-10 09:13:33 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=78056d4186b565e8da6122446bca90f6983dc1a5&h=libreoffice-4-1-0

fdo#65589: Treat legacy types.rdb w/o /UCR key as empty


It will be available already in LibreOffice 4.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michal Nowak 2013-07-10 10:39:17 UTC
(In reply to comment #6)
> Thanks for looking into this. I'll remove the types.rdb file from the
> extension.

Simon: Would you consider this change and release of updated LO extension in couple of days? LO 4.1 RC2 was released last week and 4.1 RC3 with the patch will be (just my expectation) released in 2-3 week; by releasing updated extension you may bridge the 2-3 weeks time, and I can work with Zotero again. Thanks.
Comment 12 Michal Nowak 2013-07-10 10:43:58 UTC
(In reply to comment #11)
> (In reply to comment #6)
> > Thanks for looking into this. I'll remove the types.rdb file from the
> > extension.
> 
> Simon: Would you consider this change and release of updated LO extension in
> couple of days? LO 4.1 RC2 was released last week and 4.1 RC3 with the patch
> will be (just my expectation) released in 2-3 week; by releasing updated
> extension you may bridge the 2-3 weeks time, and I can work with Zotero
> again. Thanks.

Oh, or I could remove that file myself locally... (That works.)
Comment 13 Simon Kornblith 2013-07-10 17:36:33 UTC
This is fixed in the LibreOffice Integration Dev XPI (http://www.zotero.org/support/dev_builds#word_processor_plugins_development_xpis) and our GitHub repository.