fdo#65589: Treat legacy types.rdb w/o /UCR key as empty

...as they are encountered in the wild.

Change-Id: Iae46d3b4b4aca18a09680caabc0e343f8a534989